tiny/template/org.tinygroup.templateengine/target/generated-sources/antlr4/org/tinygroup/template/parser/grammer/TinyTemplateParser.java
// Generated from org\tinygroup\template\parser\grammer\TinyTemplateParser.g4 by ANTLR 4.2.2
package org.tinygroup.template.parser.grammer;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TinyTemplateParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DIRECTIVE_BODYCONTENT=41, STRING_DOUBLE=93, DIRECTIVE_END=35, OP_MATH_PLUS=67, 
		OP_SIMPLE_CONDITION_TERNARY=82, DIRECTIVE_OPEN_MACRO_INVOKE=44, VALUE_OPEN=10, 
		DIRECTIVE_IMPORT=42, OP_ASSIGNMENT=54, OP_RELATIONAL_LT=61, OP_CONDITIONAL_NOT=66, 
		OP_MATH_MINUS=68, DIRECTIVE_OPEN_CONTINUE=17, DIRECTIVE_OPEN_CALL=21, 
		WHITESPACE=46, OP_MATH_REMAINDER=71, LEFT_BRACE=51, OP_DOT_INVOCATION_SAFE=57, 
		DIRECTIVE_SET=25, DIRECTIVE_MACRO=33, INTEGER=90, DIRECTIVE_BREAK=30, 
		DIRECTIVE_TABS=38, KEYWORD_NULL=88, TEXT_SINGLE_CHAR=7, IN=53, DIRECTIVE_END_OF_LINE=37, 
		LEFT_BRACKET=49, DIRECTIVE_OPEN_MACRO=23, DIRECTIVE_TABS_DENT=40, DIRECTIVE_OPEN_FOR=15, 
		DIRECTIVE_INCLUDE=29, DIRECTIVE_CONTINUE=31, TEXT_CDATA=5, OP_BITWISE_SHR_2=80, 
		AT=85, DIRECTIVE_OPEN_SET=12, LEFT_PARENTHESE=47, STRING_SINGLE=94, DIRECTIVE_OPEN_BREAK=16, 
		DIRECTIVE_FOR=28, DIRECTIVE_OPEN_INCLUDE=19, KEYWORD_FALSE=87, OP_CONDITIONAL_OR=65, 
		TEXT_PLAIN=4, COMMENT_LINE=1, DIRECTIVE_STOP=32, I18N_OPEN=9, OP_MATH_MULTIPLICATION=69, 
		OP_MATH_DIVISION=70, OP_BITWISE_OR=75, DIRECTIVE_BLANK=36, DIRECTIVE_OPEN_LAYOUT_IMPL=22, 
		DIRECTIVE_CALL=20, TEXT_ESCAPED_CHAR=6, PARA_SPLITER=8, OP_BITWISE_NOT=76, 
		OP_RELATIONAL_GE=62, OP_MATH_DECREMENT=73, OP_BITWISE_AND=74, IDENTIFIER=89, 
		OP_BITWISE_XOR=77, FLOATING_POINT=92, INTEGER_HEX=91, COMMA=83, RIGHT_BRACE=52, 
		OP_BITWISE_SHR=79, DIRECTIVE_OPEN_IF=13, KEYWORD_TRUE=86, DIRECTIVE_MACRO_INVOKE=43, 
		OP_RELATIONAL_GT=60, TEXT_DIRECTIVE_LIKE=45, DIRECTIVE_IF=26, COLON=84, 
		OP_DOT_DOT=55, DIRECTIVE_ELSE=34, OP_CONDITIONAL_TERNARY=81, DIRECTIVE_OPEN_LAYOUT=24, 
		DIRECTIVE_TABS_INDENT=39, RIGHT_BRACKET=50, RIGHT_PARENTHESE=48, OP_CONDITIONAL_AND=64, 
		VALUE_ESCAPED_OPEN=11, OP_EQUALITY_NE=59, OP_MATH_INCREMENT=72, OP_BITWISE_SHL=78, 
		OP_EQUALITY_EQ=58, COMMENT_BLOCK2=2, DIRECTIVE_OPEN_STOP=18, COMMENT_BLOCK1=3, 
		OP_RELATIONAL_LE=63, DIRECTIVE_OPEN_ELSEIF=14, DIRECTIVE_ELSEIF=27, OP_DOT_INVOCATION=56;
	public static final String[] tokenNames = {
		"<INVALID>", "COMMENT_LINE", "COMMENT_BLOCK2", "COMMENT_BLOCK1", "TEXT_PLAIN", 
		"TEXT_CDATA", "TEXT_ESCAPED_CHAR", "TEXT_SINGLE_CHAR", "PARA_SPLITER", 
		"'$${'", "'${'", "'$!{'", "DIRECTIVE_OPEN_SET", "DIRECTIVE_OPEN_IF", "DIRECTIVE_OPEN_ELSEIF", 
		"DIRECTIVE_OPEN_FOR", "DIRECTIVE_OPEN_BREAK", "DIRECTIVE_OPEN_CONTINUE", 
		"DIRECTIVE_OPEN_STOP", "DIRECTIVE_OPEN_INCLUDE", "DIRECTIVE_CALL", "DIRECTIVE_OPEN_CALL", 
		"DIRECTIVE_OPEN_LAYOUT_IMPL", "DIRECTIVE_OPEN_MACRO", "DIRECTIVE_OPEN_LAYOUT", 
		"DIRECTIVE_SET", "'#if'", "'#elseif'", "'#for'", "'#include'", "'#break'", 
		"'#continue'", "'#stop'", "'#macro'", "DIRECTIVE_ELSE", "DIRECTIVE_END", 
		"DIRECTIVE_BLANK", "DIRECTIVE_END_OF_LINE", "DIRECTIVE_TABS", "DIRECTIVE_TABS_INDENT", 
		"DIRECTIVE_TABS_DENT", "DIRECTIVE_BODYCONTENT", "DIRECTIVE_IMPORT", "DIRECTIVE_MACRO_INVOKE", 
		"DIRECTIVE_OPEN_MACRO_INVOKE", "TEXT_DIRECTIVE_LIKE", "WHITESPACE", "'('", 
		"')'", "'['", "']'", "'{'", "'}'", "'in'", "'='", "'..'", "'.'", "'?.'", 
		"'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'&&'", "'||'", "'!'", "'+'", 
		"'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'&'", "'|'", "'~'", "'^'", 
		"'<<'", "'>>'", "'>>>'", "'?'", "'?:'", "','", "':'", "'@'", "'true'", 
		"'false'", "'null'", "IDENTIFIER", "INTEGER", "INTEGER_HEX", "FLOATING_POINT", 
		"STRING_DOUBLE", "STRING_SINGLE"
	};
	public static final int
		RULE_template = 0, RULE_block = 1, RULE_text = 2, RULE_comment = 3, RULE_value = 4, 
		RULE_directive = 5, RULE_identify_list = 6, RULE_define_expression_list = 7, 
		RULE_para_expression_list = 8, RULE_para_expression = 9, RULE_define_expression = 10, 
		RULE_set_directive = 11, RULE_set_expression = 12, RULE_endofline_directive = 13, 
		RULE_tabs_directive = 14, RULE_blank_directive = 15, RULE_indent_directive = 16, 
		RULE_dent_directive = 17, RULE_if_directive = 18, RULE_elseif_directive = 19, 
		RULE_else_directive = 20, RULE_for_directive = 21, RULE_for_expression = 22, 
		RULE_break_directive = 23, RULE_import_directive = 24, RULE_continue_directive = 25, 
		RULE_stop_directive = 26, RULE_include_directive = 27, RULE_macro_directive = 28, 
		RULE_layout_directive = 29, RULE_call_block_directive = 30, RULE_layout_impl_directive = 31, 
		RULE_call_directive = 32, RULE_call_macro_block_directive = 33, RULE_bodycontent_directive = 34, 
		RULE_call_macro_directive = 35, RULE_invalid_directive = 36, RULE_expression = 37, 
		RULE_constant = 38, RULE_expression_list = 39, RULE_hash_map_entry_list = 40, 
		RULE_expression_range = 41;
	public static final String[] ruleNames = {
		"template", "block", "text", "comment", "value", "directive", "identify_list", 
		"define_expression_list", "para_expression_list", "para_expression", "define_expression", 
		"set_directive", "set_expression", "endofline_directive", "tabs_directive", 
		"blank_directive", "indent_directive", "dent_directive", "if_directive", 
		"elseif_directive", "else_directive", "for_directive", "for_expression", 
		"break_directive", "import_directive", "continue_directive", "stop_directive", 
		"include_directive", "macro_directive", "layout_directive", "call_block_directive", 
		"layout_impl_directive", "call_directive", "call_macro_block_directive", 
		"bodycontent_directive", "call_macro_directive", "invalid_directive", 
		"expression", "constant", "expression_list", "hash_map_entry_list", "expression_range"
	};

	@Override
	public String getGrammarFileName() { return "TinyTemplateParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TinyTemplateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TemplateContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyTemplateParserListener ) ((TinyTemplateParserListener)listener).enterTemplate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyTemplateParserListener ) ((TinyTemplateParserListener)listener).exitTemplate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyTemplateParserVisitor ) return ((TinyTemplateParserVisitor<? extends T>)visitor).visitTemplate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_template);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public DirectiveContext directive(int i) {
			return getRuleContext(DirectiveContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public List<DirectiveContext> directive() {
			return getRuleContexts(DirectiveContext.class);
		}
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyTemplateParserListener ) ((TinyTemplateParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyTemplateParserListener ) ((TinyTemplateParserListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyTemplateParserVisitor ) return ((TinyTemplateParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT_LINE) | (1L << COMMENT_BLOCK2) | (1L << COMMENT_BLOCK1) | (1L << TEXT_PLAIN) | (1L << TEXT_CDATA) | (1L << TEXT_ESCAPED_CHAR) | (1L << TEXT_SINGLE_CHAR) | (1L << I18N_OPEN) | (1L << VALUE_OPEN) | (1L << VALUE_ESCAPED_OPEN) | (1L << DIRECTIVE_OPEN_SET) | (1L << DIRECTIVE_OPEN_IF) | (1L << DIRECTIVE_OPEN_FOR) | (1L << DIRECTIVE_OPEN_BREAK) | (1L << DIRECTIVE_OPEN_CONTINUE) | (1L << DIRECTIVE_OPEN_STOP) | (1L << DIRECTIVE_OPEN_INCLUDE) | (1L << DIRECTIVE_CALL) | (1L << DIRECTIVE_OPEN_CALL) | (1L << DIRECTIVE_OPEN_LAYOUT_IMPL) | (1L << DIRECTIVE_OPEN_MACRO) | (1L << DIRECTIVE_OPEN_LAYOUT) | (1L << DIRECTIVE_SET) | (1L << DIRECTIVE_IF) | (1L << DIRECTIVE_ELSEIF) | (1L << DIRECTIVE_FOR) | (1L << DIRECTIVE_INCLUDE) | (1L << DIRECTIVE_BREAK) | (1L << DIRECTIVE_CONTINUE) | (1L << DIRECTIVE_STOP) | (1L << DIRECTIVE_MACRO) | (1L << DIRECTIVE_BLANK) | (1L << DIRECTIVE_END_OF_LINE) | (1L << DIRECTIVE_TABS) | (1L << DIRECTIVE_TABS_INDENT) | (1L << DIRECTIVE_TABS_DENT) | (1L << DIRECTIVE_BODYCONTENT) | (1L << DIRECTIVE_IMPORT) | (1L << DIRECTIVE_MACRO_INVOKE) | (1L << DIRECTIVE_OPEN_MACRO_INVOKE) | (1L << TEXT_DIRECTIVE_LIKE))) != 0)) {
				{
				setState(90);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(86); comment();
					}
					break;

				case 2:
					{
					setState(87); directive();
					}
					break;

				case 3:
					{
					setState(88); text();
					}
					break;

				case 4:
					{
					setState(89); value();
					}
					break;
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextContext extends ParserRuleContext {
		public TerminalNode TEXT_SINGLE_CHAR() { return getToken(TinyTemplateParser.TEXT_SINGLE_CHAR, 0); }
		public TerminalNode COMMENT_LINE() { return getToken(TinyTemplateParser.COMMENT_LINE, 0); }
		public TerminalNode COMMENT_BLOCK1() { return getToken(TinyTemplateParser.COMMENT_BLOCK1, 0); }
		public TerminalNode COMMENT_BLOCK2() { return getToken(TinyTemplateParser.COMMENT_BLOCK2, 0); }
		public TerminalNode TEXT_ESCAPED_CHAR() { return getToken(TinyTemplateParser.TEXT_ESCAPED_CHAR, 0); }
		public TerminalNode TEXT_CDATA() { return getToken(TinyTemplateParser.TEXT_CDATA, 0); }
		public TerminalNode TEXT_DIRECTIVE_LIKE() { return getToken(TinyTemplateParser.TEXT_DIRECTIVE_LIKE, 0); }
		public TerminalNode TEXT_PLAIN() { return getToken(TinyTemplateParser.TEXT_PLAIN, 0); }
		public TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyTemplateParserListener ) ((TinyTemplateParserListener)listener).enterText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyTemplateParserListener ) ((TinyTemplateParserListener)listener).exitText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyTemplateParserVisitor ) return ((TinyTemplateParserVisitor<? extends T>)visitor).visitText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextContext text() throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_text);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT_LINE) | (1L << COMMENT_BLOCK2) | (1L << COMMENT_BLOCK1) | (1L << TEXT_PLAIN) | (1L << TEXT_CDATA) | (1L << TEXT_ESCAPED_CHAR) | (1L << TEXT_SINGLE_CHAR) | (1L << TEXT_DIRECTIVE_LIKE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentContext extends ParserRuleContext {
		public TerminalNode COMMENT_LINE() { return getToken(TinyTemplateParser.COMMENT_LINE, 0); }
		public TerminalNode COMMENT_BLOCK1() { return getToken(TinyTemplateParser.COMMENT_BLOCK1, 0); }
		public TerminalNode COMMENT_BLOCK2() { return getToken(TinyTemplateParser.COMMENT_BLOCK2, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyTemplateParserListener ) ((TinyTemplateParserListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyTemplateParserListener ) ((TinyTemplateParserListener)listener).exitComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyTemplateParserVisitor ) return ((TinyTemplateParserVisitor<? extends T>)visitor).visitComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT_LINE) | (1L << COMMENT_BLOCK2) | (1L << COMMENT_BLOCK1))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode VALUE_ESCAPED_OPEN() { return getToken(TinyTemplateParser.VALUE_ESCAPED_OPEN, 0); }
		public TerminalNode VALUE_OPEN() { return getToken(TinyTemplateParser.VALUE_OPEN, 0); }
		public Identify_listContext identify_list() {
			return getRuleContext(Identify_listContext.class,0);
		}
		public TerminalNode I18N_OPEN() { return getToken(TinyTemplateParser.I18N_OPEN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyTemplateParserListener ) ((TinyTemplateParserListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyTemplateParserListener ) ((TinyTemplateParserListener)listener).exitValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyTemplateParserVisitor ) return ((TinyTemplateParserVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_value);
		try {
			setState(111);
			switch (_input.LA(1)) {
			case VALUE_OPEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(99); match(VALUE_OPEN);
				setState(100); expression(0);
				setState(101); match(RIGHT_BRACE);
				}
				break;
			case VALUE_ESCAPED_OPEN:
				enterOuterAlt(_localctx, 2);
				{
				setState(103); match(VALUE_ESCAPED_OPEN);
				setState(104); expression(0);
				setState(105); match(RIGHT_BRACE);
				}
				break;
			case I18N_OPEN:
				enterOuterAlt(_localctx, 3);
				{
				setState(107); match(I18N_OPEN);
				setState(108); identify_list();
				setState(109); match(RIGHT_BRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectiveContext extends ParserRuleContext {
		public Break_directiveContext break_directive() {
			return getRuleContext(Break_directiveContext.class,0);
		}
		public Invalid_directiveContext invalid_directive() {
			return getRuleContext(Invalid_directiveContext.class,0);
		}
		public Tabs_directiveContext tabs_directive() {
			return getRuleContext(Tabs_directiveContext.class,0);
		}
		public Call_macro_directiveContext call_macro_directive() {
			return getRuleContext(Call_macro_directiveContext.class,0);
		}
		public For_directiveContext for_directive() {
			return getRuleContext(For_directiveContext.class,0);
		}
		public Macro_directiveContext macro_directive() {
			return getRuleContext(Macro_directiveContext.class,0);
		}
		public Stop_directiveContext stop_directive() {
			return getRuleContext(Stop_directiveContext.class,0);
		}
		public Bodycontent_directiveContext bodycontent_directive() {
			return getRuleContext(Bodycontent_directiveContext.class,0);
		}
		public Layout_impl_directiveContext layout_impl_directive() {
			return getRuleContext(Layout_impl_directiveContext.class,0);
		}
		public Set_directiveContext set_directive() {
			return getRuleContext(Set_directiveContext.class,0);
		}
		public Endofline_directiveContext endofline_directive() {
			return getRuleContext(Endofline_directiveContext.class,0);
		}
		public Call_macro_block_directiveContext call_macro_block_directive() {
			return getRuleContext(Call_macro_block_directiveContext.class,0);
		}
		public Call_block_directiveContext call_block_directive() {
			return getRuleContext(Call_block_directiveContext.class,0);
		}
		public Include_directiveContext include_directive() {
			return getRuleContext(Include_directiveContext.class,0);
		}
		public Call_directiveContext call_directive() {
			return getRuleContext(Call_directiveContext.class,0);
		}
		public Indent_directiveContext indent_directive() {
			return getRuleContext(Indent_directiveContext.class,0);
		}
		public Layout_directiveContext layout_directive() {
			return getRuleContext(Layout_directiveContext.class,0);
		}
		public Import_directiveContext import_directive() {
			return getRuleContext(Import_directiveContext.class,0);
		}
		public Blank_directiveContext blank_directive() {
			return getRuleContext(Blank_directiveContext.class,0);
		}
		public If_directiveContext if_directive() {
			return getRuleContext(If_directiveContext.class,0);
		}
		public Dent_directiveContext dent_directive() {
			return getRuleContext(Dent_directiveContext.class,0);
		}
		public Continue_directiveContext continue_directive() {
			return getRuleContext(Continue_directiveContext.class,0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyTemplateParserListener ) ((TinyTemplateParserListener)listener).enterDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyTemplateParserListener ) ((TinyTemplateParserListener)listener).exitDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyTemplateParserVisitor ) return ((TinyTemplateParserVisitor<? extends T>)visitor).visitDirective(this);
			else return visitor.visitChildren(this);
		}
	}
